# calendar

./: .gitignore  Cargo.toml  Dockerfile  README.md  manifest.json
.github/workflows/: release.yml
examples/: basic_operations.py
logs/: session_start.json  user_prompt_submit.json
module/: gcal.py
scripts/: calendar-cli.py
skills/claude-code/: SKILL.md
skills/continue/: calendar.yaml
skills/cursor/: calendar.mdc
skills/windsurf/: calendar.md
src/: main.rs
