[package]
name = "fgp-calendar"
version = "1.0.0"
edition = "2021"
authors = ["Wolfgang Schoenberger"]
description = "Fast Google Calendar daemon for FGP"
license = "MIT"
repository = "https://github.com/fast-gateway-protocol/calendar"

[dependencies]
fgp-daemon = { path = "../daemon", features = ["python"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"

[[bin]]
name = "fgp-calendar"
path = "src/main.rs"
